# CodeRealTime_SFML_Applications

./: .gitignore
DiceRoll/: .gitignore  README.md
DiceRoll/DiceRoll/: Dice.art  DiceRoll.tcjs  Main.art  Protocol.art  Top.art
DiceRoll/SFML/: CMakeLists.txt
DiceRoll/gui/: CMakeLists.txt
DiceRoll/gui/include/: Gui.h
DiceRoll/gui/src/: Gui.cpp
HelloWorld/: .gitignore  README.md
HelloWorld/HelloWorld/: Hello.art  HelloWorld.tcjs
HelloWorld/HelloWorld/gui/src/: Gui.cpp
HelloWorld/gui/include/: Gui.h
HelloWorld/gui/src/: Gui.cpp
Race/: .gitignore  README.md
Race/Race/: Animal.h  Main.art  Protocol.art  Race.tcjs  RaceEntryMessage.art  Racer.art  RacerProfile.art  Top.art  UI.art
Race/Race/config/: GlobalMacros.h  RacePrinterMacros.h  RacerProfileMacros.h
Race/Race/gui/include/: Gui.h
Race/Race/gui/src/: Gui.cpp
